# sx-axum-base

./: .toml  Cargo.toml
config/: Cargo.toml
config/src/: lib.rs
db/: Cargo.toml
db/src/: lib.rs
log/: Cargo.toml
log/src/: lib.rs
serv/: Cargo.toml
serv/src/: lib.rs  route.rs  state.rs
src/: main.rs
toolkit/: Cargo.toml
toolkit/src/: lib.rs
