[package]
name = "serv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
config = { version = "0.1.0", path = "../config" }
db = { version = "0.1.0", path = "../db" }
log = { version = "0.1.0", path = "../log" }
sea-orm.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
